--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <body>
   <header>
     <h1>Välkommen till Rum 4</h1>
+    <nav>
+      <a href="/about">Om oss</a>
+      <a href="/contact">Kontakta oss</a>
+    </nav>
   </header>
   <main>
     <h1>Welcome!</h1>
