Update links in index.html to remove leading slash

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <header>
     <h1>Välkommen till Rum 4</h1>
     <nav>
-      <a href="/about.html">Om oss</a>
-      <a href="/contact.html">Kontakta oss</a>
+      <a href="about.html">Om oss</a>
+      <a href="contact.html">Kontakta oss</a>
     </nav>
   </header>
   <main>
