--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rum 4</title>
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="css/main.css?v=1">
 </head>
 
 <body>
