Added new section to start page

--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
       <article>Child 1</article>
       <article>Child 2</article>
     </section>
+    <section>
+      <article>
+        <h2>Oscars sektion</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus veritatis non, ducimus exercitationem similique ullam esse consequatur neque veniam ratione saepe autem itaque commodi expedita. Magni ullam alias sed nesciunt?</p>
+      </article>
+    </section>
   </main>
   <footer>
     <ul>
