--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
       <article>Child 1</article>
       <article>Child 2</article>
     </section>
+    <section>
+        <article>Child 3</article>
+        <article>Child 4</article>
+    </section>
   </main>
   <footer>
     <ul>
