--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <section>
         <article>Child 3</article>
         <article>Child 4</article>
+        <article>Child 5</article>
     </section>
   </main>
   <footer>
