--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
         <article>Child 3</article>
         <article>Child 4</article>
     </section>
+    <section>
+        <article>
+          <h2>Oscars section</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio odit repudiandae beatae quia placeat, porro laudantium, vero excepturi ab ducimus iure voluptates quod illum nostrum quidem ea? Quibusdam, eos delectus?</p>
+        </article>
+    </section>
   </main>
   <footer>
     <ul>
